--- a/forum/common.css
+++ b/forum/common.css
@@ -1,9 +1,14 @@
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+      width: 100%;
+    }
+}
 body{
     background-color: rgba(0, 0, 0, 0.055);
     margin:0px;
-  }
+}
 textarea{
-    vertical-align: top;
     box-sizing: border-box;
     border-radius: 4px;
     background-color:whitesmoke;
@@ -40,11 +45,6 @@ button:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-span.psw {
-    float: right;
-    padding-top: 16px;
-}
-
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
@@ -74,37 +74,31 @@ span.psw {
     background-color: rgb(94, 161, 114);
     color: white;
 }
-ol li {
-    padding:5px;
-    margin-bottom:5px;
-    border-style: solid;
-    border-width: 0.5px;
-    border-color: grey;
-    box-sizing: border-box;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-}
 table, th, td {
     width: auto;
     font-size: 20px;
     margin-right:auto;
-}
-.toEnable{
-    display: none;
 }
 #page-container{
     width:100%;
     /* */
 }
 #left-tab{
+    float: left;
     height:75%;
-    width:29%;
+    width:14%;
     display:inline-block;
     border-right: 1px solid black;
     margin-left:5px; 
     margin-right:5px;
 }
 #content{
-    width:70%;
+    width:80%;
     display:inline-block;
+}
+#header{
+    width:100px;
+    padding-top:10px;
+    padding-bottom:10px;
+    background-color: black;
 }
