--- a/forum/common.css
+++ b/forum/common.css
@@ -11,8 +11,12 @@
     border:0px;
     /*overflow: auto;*/
 }
+a{
+    color:black;
+    text-decoration: none;
+}
 body{
-    background-color: rgba(0, 0, 0, 0.055);
+    background-color: rgba(0, 0, 0, 0.356);
     margin:0px;
 }
 /* Full-width input fields */
@@ -34,7 +38,7 @@ button, .submitbtn, input[attr="subbtn"] {
     width: 100%;
 }
 
-button:hover {
+a:hover,button:hover {
     opacity: 0.8;
 }
 
@@ -50,79 +54,107 @@ button:hover {
     border: 1px solid #888;
     width: 50%; /* Could be more or less, depending on screen size */
 }
-/* Style the tab buttons */
-.tab{
-    font-size: 0px;
-}
-.tablinks {
-    border: none;
-    border-width:0px;
-    outline: none;
-    background-color:rgba(204, 0, 102, 0.63);
-    cursor: pointer;
-    font-size: 18px;
-}
 
 /* Style the tables and buttons on mouse-over */
 table, th, td {
-    width: auto;
-    font-size: 20px;
+    width: max-content;
+    margin-left:auto; 
     margin-right:auto;
+    text-align: center;
 }
 #page-container{
     width:100%;
     /* */
 }
 #left-tab{
-    float: left;
-    height:75%;
-    width:14%;
+    position: absolute;
+    left: 0;right: 0;top: 8%;bottom:0;
+    height: fill;
+    width:100px;
     display:inline-block;
     border-right: 1px solid black;
     margin-left:5px; 
     margin-right:5px;
+    overflow-x: hidden;
+    padding-top: 20px;
 }
 #content{
     width:80%;
     display:inline-block;
 }
-#header{
-    width:100%;
-    text-align: center;
-    min-height: 8%;
-    padding-right: 2%;
-    padding-left: 2%;
-    background-color:grey;
-    border-bottom: 1.5px solid black;
-    border-top: 3px solid greenyellow;
-}
-#navigation{
-    position: relative;
-    display:table-row;
-    background-color:rgba(82, 82, 82, 0.445);
-    display:inline-block;
-    float:right;
-    font-size:15px;
-}
 
-#navigation #navigationButton,#navigation h1{
-    display:inline-block;
-    padding:1%;
-    background-color: #f1f1f1;
-    width: 100px;
-    margin: 10px;
-    text-align: center;
-    line-height: 100%;
+
+
+/*new thing*/
+
+body {
+    font-family: 'Segoe UI', sans-serif;
+  }
+  #logo {
+    float: left;
     font-size: 30px;
-}
-#navigationbutton ul{
-    display:none;
-    list-style:none;
-}
-#navigationButton:hover > ul{
-    display:block;
-}
-h1{
-    float:left;
-    margin: 0px;
-}
+    color: white;
+  }
+  .menu{
+    height: 8%;
+    float:right;
+  }
+  .menu>ul {
+    list-style-type: none;
+    width: 100%;
+    background-color: #333;
+  }
+  .element {
+    width: 120px;
+    height: auto;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+  }
+  .menu>ul>li {
+    float: left;
+  }
+  .element:hover {
+    background-color: #555;
+    cursor: pointer;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  .menu>ul>li>ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: none;
+  }
+  .menu>ul>li:hover>ul {
+    display: block;
+  }
+  .menu>ul>li:hover>ul:hover>li:hover {
+    display: block;
+    background-color: #666;
+  }
+  .menu>ul>li>ul>li {
+    margin: 10px;
+  }
+  
+  /*added*/
+  .element {
+   position: relative;
+  }
+  .menu>ul>li>ul {
+    position: absolute;
+    background-color: #555;
+    width: 100%;
+    left: 0;
+    top: 100%;
+    z-index: 1;
+  }
+  #topbar{
+    height: 8%;
+    border-bottom: 1px solid black;
+    border-top: 2px solid greenyellow;
+  }
+  
