--- a/forum/common.css
+++ b/forum/common.css
@@ -16,7 +16,7 @@ a{
     text-decoration: none;
 }
 body{
-    background-color: rgba(0, 0, 0, 0.356);
+    background-color: #FAFAFB;
     margin:0px;
 }
 /* Full-width input fields */
@@ -68,7 +68,7 @@ table, th, td {
 }
 #left-tab{
     position: absolute;
-    left: 0;right: 0;top: 8%;bottom:0;
+    left: 0;right: 0;top: 7%;bottom:0;
     height: fill;
     width:100px;
     display:inline-block;
@@ -82,7 +82,9 @@ table, th, td {
     width:80%;
     display:inline-block;
 }
-
+h1{
+    font-size: 1.7em;
+}
 
 
 /*new thing*/
@@ -95,17 +97,22 @@ body {
     font-size: 30px;
     color: white;
   }
+#title{
+    float: left;
+  }
   .menu{
-    height: 8%;
     float:right;
+    height: 7%;
   }
   .menu>ul {
     list-style-type: none;
     width: 100%;
     background-color: #333;
+    height: auto;
   }
   .element {
-    width: 120px;
+    min-width:100px;
+    position: relative;
     height: auto;
     display: inline-block;
     color: white;
@@ -118,12 +125,10 @@ body {
   .element:hover {
     background-color: #555;
     cursor: pointer;
-  }
-  a {
-    text-decoration: none;
-    color: white;
+    box-shadow:10px 10px;
   }
   .menu>ul>li>ul {
+    width:100%;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -139,21 +144,18 @@ body {
   .menu>ul>li>ul>li {
     margin: 10px;
   }
-  
-  /*added*/
-  .element {
-   position: relative;
-  }
   .menu>ul>li>ul {
     position: absolute;
     background-color: #555;
-    width: 100%;
-    left: 0;
+    right:0;
     top: 100%;
     z-index: 1;
   }
   #topbar{
-    height: 8%;
+    height: 7%;
+    padding-left:1%;
+    padding-right:2%;
+    background-color: #FAFAFB;
     border-bottom: 1px solid black;
     border-top: 2px solid greenyellow;
   }
