--- a/forum/common.css
+++ b/forum/common.css
@@ -9,10 +9,9 @@
     margin:0px;
     padding:0px;
     border:0px;
-    /*overflow: auto;*/
 }
 a{
-    color:black;
+    color:white;
     text-decoration: none;
 }
 body{
@@ -66,24 +65,39 @@ table, th, td {
     width:100%;
     /* */
 }
+
 #left-tab{
+    color: white;
     position: absolute;
     left: 0;right: 0;top: 7%;bottom:0;
     height: fill;
     width:100px;
     display:inline-block;
-    border-right: 1px solid black;
-    margin-left:5px; 
+    border-right: 1px solid rgb(37, 200, 206); 
     margin-right:5px;
     overflow-x: hidden;
     padding-top: 20px;
+    background-color: rgb(32, 38, 46);
+}
+#left-tab>*{
+    color: white;
+}
+#left-tab>*:hover{
+    color:black;
+    background-color: white;
 }
 #content{
     width:80%;
     display:inline-block;
 }
 h1{
+    color:white;
     font-size: 1.7em;
+}
+.categoryLinks:hover,.categoryLinks:hover>td>a{
+    background-color: white;
+    color:black;
+    border-radius: 7px;
 }
 
 
@@ -92,7 +106,7 @@ h1{
 body {
     font-family: 'Segoe UI', sans-serif;
   }
-  #logo {
+#logo {
     float: left;
     font-size: 30px;
     color: white;
@@ -113,19 +127,20 @@ body {
   .element {
     min-width:100px;
     position: relative;
-    height: auto;
     display: inline-block;
     color: white;
     text-align: center;
     font-size: 20px;
   }
+  .element>a{   
+    height:1.5em;
+  }
   .menu>ul>li {
     float: left;
   }
   .element:hover {
-    background-color: #555;
+    border-bottom: 1px solid #0084ff;
     cursor: pointer;
-    box-shadow:10px 10px;
   }
   .menu>ul>li>ul {
     width:100%;
@@ -146,7 +161,7 @@ body {
   }
   .menu>ul>li>ul {
     position: absolute;
-    background-color: #555;
+    background-color: black;
     right:0;
     top: 100%;
     z-index: 1;
@@ -155,8 +170,8 @@ body {
     height: 7%;
     padding-left:1%;
     padding-right:2%;
-    background-color: #FAFAFB;
+    background-color: rgb(32, 38, 46);
     border-bottom: 1px solid black;
-    border-top: 2px solid greenyellow;
+    border-top: 2px solid #0084ff;
   }
   
