day signup page connection name change

--- a/forum/common.css
+++ b/forum/common.css
@@ -14,9 +14,9 @@ a{
     color:white;
     text-decoration: none;
 }
-body{
+html,body{
+    height:100%;
     background-color: #FAFAFB;
-    margin:0px;
 }
 /* Full-width input fields */
 input[type=text], input[type=password],input[type=date] {
@@ -119,10 +119,11 @@ body {
     height: 7%;
   }
   .menu>ul {
+    display:inline-block;
     list-style-type: none;
     width: 100%;
     background-color: #333;
-    height: auto;
+    height: 6%;
   }
   .element {
     min-width:100px;
@@ -133,7 +134,7 @@ body {
     font-size: 20px;
   }
   .element>a{   
-    height:1.5em;
+    height:40px;
   }
   .menu>ul>li {
     float: left;
