--- a/forum/newcss.css
+++ b/forum/newcss.css
@@ -116,8 +116,8 @@ body {
   }
   .menu{
     float:right;
-    height: 7vh;
-    width:auto;
+    height: 6vh;
+    width:fit-content;
   }
   .menu>ul {
     display:inline-block;
@@ -125,23 +125,26 @@ body {
     height: 6vh;
   }
   .element {
-    min-width:70px;
+    padding-left: 1vw;
+    padding-right: 1vw;
     position: relative;
     display: inline-block;
     color: white;
     text-align: center;
     font-size: 20px;
-    height:6vh;
+    height:7vh;
   }
   .menu>ul>li {
     float: left;
   }
   .element:hover {
-    border-bottom: 1px solid #0084ff;
+    border-bottom: 3px solid #0084ff;
     cursor: pointer;
+    z-index: 1;
   }
   .menu>ul>li>ul {
-    width:100vw;
+    
+    width:auto;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -159,15 +162,15 @@ body {
   }
   .menu>ul>li>ul {
     position: absolute;
-    background-color: black;
+    background-color: #0084ff;
     right:0;
-    top: 100vh;
+    top: 7vh;
     z-index: 1;
   }
   #topbar{
     height: 7vh;
     padding-left:1vw;
-    padding-right:2vw;
+    padding-right:4vw;
     background-color: rgb(32, 38, 46);
     border-bottom: 1px solid black;
     border-top: 2px solid #0084ff;
