changes to mystyle.css

--- a/forum/style2.css
+++ b/forum/style2.css
@@ -2,7 +2,15 @@ html, body {
   height: 100%;
   margin: 0;
 }
-
+a{
+  color:white;
+  text-decoration: none;
+}
+a:hover{
+  color:grey;
+  background-color:red;
+  border-radius: 3px;
+}
 body {
     
     font-family: "Asap", sans-serif;
@@ -26,6 +34,7 @@ body {
     background-color: rgb(0, 0, 51);
     font-size:0px;
     border-radius: 4px;
+    padding:1%;
     margin: 1%;
     position:fixed;
     width:100%;
