--- a/forum/style2.css
+++ b/forum/style2.css
@@ -152,17 +152,17 @@ body {
     left: 40%;
     bottom: -130%;
     background-color: rgba(250, 51, 78, 0.801);
-    animation: wawes 6s infinite linear;
+    animation: waves 6s infinite linear;
     
   }
   .login::after {
     left: 35%;
     bottom: -125%;
     background-color: rgba(105, 39, 212, 0.472);
-    animation: wawes 7s infinite;
+    animation: waves 7s infinite;
     
   }
-  @keyframes wawes {
+  @keyframes waves {
     from {
       transform: rotate(0);
     }
@@ -172,7 +172,7 @@ body {
   }
 
   .wrapper {
-    min-height: 100%;
+    min-height: 95%;
     margin-bottom: -50px;
   }
 
