--- a/forum/style2.css
+++ b/forum/style2.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
 a{
@@ -12,14 +12,13 @@ a:hover{
   border-radius: 3px;
 }
 body {
-    
-    font-family: "Asap", sans-serif;
-  }
+  font-family: "Asap", sans-serif;
+}
 
   .header img {
     float: left;
-    width: 339px;
-    height: 152px;
+    width:40px;
+    height:40px;
     
   }
   body form h2{
@@ -35,9 +34,11 @@ body {
     font-size:0px;
     border-radius: 4px;
     padding:1%;
-    margin: 1%;
-    position:fixed;
-    width:100%;
+    margin-top: 1px;    
+    margin-bottom: 1px;    
+    margin-left:auto;
+    margin-right:auto;
+    width: 90%;;
     top:0;
   }
 
@@ -177,4 +178,10 @@ body {
 
   .footer{
   height: 5vh;
+}
+#login-status{
+  text-align:center;
+  /*background-color:white;*/
+  color:red;
+  margin:10px;
 }
