--- a/forum/common.css
+++ b/forum/common.css
@@ -90,89 +90,109 @@ table, th, td {
     width:80%;
     display:inline-block;
 }
-h1{
-    color:white;
-    font-size: 1.7em;
-}
-.categoryLinks:hover,.categoryLinks:hover>td>a{
-    background-color: white;
+
+.categoryLinks:hover,.categoryLinks:hover>td{
+    background-color: #0084ff;
     color:black;
-    border-radius: 7px;
+    border-radius: 2px;
 }
 
 
 /*new thing*/
 
 body {
-    font-family: 'Segoe UI', sans-serif;
-  }
+  font-family: 'Segoe UI', sans-serif;
+}
+#topbar{
+  height: 7vh;
+  padding-left:20px;
+  padding-right:20px;
+  background-color: rgb(28, 33, 40);
+  border-top: 2px solid #0084ff;
+  border-bottom: 1px solid black;
+}
+#topbar>title>img,#topbar>title>a{
+    background-color: white;
+}
 #logo {
-    float: left;
-    font-size: 30px;
-    color: white;
-  }
+  float: left;
+  color: white;
+}
 #title{
-    float: left;
-  }
-  .menu{
-    float:right;
-    height: 7%;
-  }
-  .menu>ul {
-    display:inline-block;
-    list-style-type: none;
-    width: 100%;
-    background-color: #333;
-    height: 6%;
-  }
-  .element {
-    min-width:100px;
-    position: relative;
-    display: inline-block;
-    color: white;
-    text-align: center;
-    font-size: 20px;
-  }
-  .element>a{   
-    height:40px;
-  }
-  .menu>ul>li {
-    float: left;
-  }
-  .element:hover {
-    border-bottom: 1px solid #0084ff;
-    cursor: pointer;
-  }
-  .menu>ul>li>ul {
-    width:100%;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: none;
-  }
-  .menu>ul>li:hover>ul {
-    display: block;
-  }
-  .menu>ul>li:hover>ul:hover>li:hover {
-    display: block;
-    background-color: #666;
-  }
-  .menu>ul>li>ul>li {
-    margin: 10px;
-  }
-  .menu>ul>li>ul {
-    position: absolute;
-    background-color: black;
-    right:0;
-    top: 100%;
-    z-index: 1;
-  }
-  #topbar{
-    height: 7%;
-    padding-left:1%;
-    padding-right:2%;
-    background-color: rgb(32, 38, 46);
-    border-bottom: 1px solid black;
-    border-top: 2px solid #0084ff;
-  }
+  height:100%;
+  float: left;
+  width:150px;
+}
+#title-name{
+  vertical-align: top;
+  display: inline-block;
+  color:white;
+  font-size: 1.7em;
+  height: fit-content;
+}
+.menu{
+  float:right;
+  height: 6vh;
+  width:fit-content;
+}
+.menu>ul {
+  display:inline-block;
+  list-style-type: none;
+  height: 6vh;
+}
+.element {
+  padding-left: 1vw;
+  padding-right: 1vw;
+  position: relative;
+  display: inline-block;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  height:7vh;
+}
+.element>*{
+  display:inline-block;
+  vertical-align: top;
+}
+.element>#plusIcon{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: xx-large;
+  width:30px;
+  height: 30px;
+}
+.menu>ul>li {
+  float: left;
+}
+.element:hover,.element:active {
+  background-color: #0084ff;
+  border-bottom: 3px solid #0084ff;
+  cursor: pointer;
+  z-index: 1;
+}
+.menu>ul>li>ul {
   
+  width:auto;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: none;
+}
+.menu>ul>li:hover>ul,.menu>ul>li:active>ul {
+  display: block;
+}
+.menu>ul>li:hover>ul:hover>li:hover {
+  display: block;
+  background-color: rgb(32, 38, 46);
+  border-radius:5px
+}
+.menu>ul>li>ul>li {
+  padding: 5px;
+  margin:5px;
+}
+.menu>ul>li>ul {
+  position: absolute;
+  background-color: #0084ff;
+  right:0;
+  top: 7vh;
+  z-index: 1;
+}
