day 7 css changes for login

--- a/forum/style2.css
+++ b/forum/style2.css
@@ -1,3 +1,7 @@
+*{
+  margin:0;
+  padding:0;
+}
 html, body {
   height: 100vh;
   margin: 0;
@@ -74,10 +78,6 @@ body {
     
     background-color: rgb(0, 0, 51);
   }*/
-
-  #iover {
-    margin: auto;
-  }
 
   .bottom {
       position: fixed;
