--- a/forum/style2.css
+++ b/forum/style2.css
@@ -42,15 +42,6 @@ body {
     justify-content: center;
   }
 
-  #democontainer {
-    width: 100px ;
-    max-width: 100% ;
-    margin-left: auto ;
-    margin-right: auto ;
-    background-color: rgb(0, 0, 51);
-    border-radius: 4px;
-  }
-
   .footer {
     background-color: rgb(0, 0, 51);
     border-radius: 4px;
@@ -92,7 +83,7 @@ body {
     left: -150px;
   }
   
-  .login {
+  .login, .signup {
     overflow: hidden;
     background-color:#000033;
     padding: 40px 30px 30px 30px;
@@ -107,7 +98,7 @@ body {
     
   }
   
-  .login > input {
+  .login > input, .signup > input  {
     font-family: "Asap", sans-serif;
     display: block;
     border-radius: 5px;
@@ -118,7 +109,7 @@ body {
     padding: 10px 10px;
     margin: 15px -10px;
   }
-  .login > button {
+  .login > button, .signup > button {
     font-family: "Asap", sans-serif;
     cursor: pointer;
     color: rgb(255, 255, 255);
@@ -134,7 +125,7 @@ body {
     transition: background-color 300ms;
   }
 
-  .login > a{
+  .login > a, .signup > a{
     font-family: "Asap", sans-serif;
     cursor: pointer;
     color: rgb(255, 255, 255);
@@ -150,10 +141,10 @@ body {
     transition: background-color 300ms;
   }
 
-  .login > button:hover {
+  .login > button:hover, .signup > button:hover {
     background-color: #FB2326;
   }
-  .login::before, .login::after {
+  .login::before, .login::after, .signup::before, .signup::after {
     content: '';
     position: absolute;
     width: 600px;
@@ -199,4 +190,28 @@ body {
   margin:10px;
   box-shadow: 3px 3px 15px rgb(21, 181, 202); /*(x_pos,y_pos,fadeout-> color)*/
   border-radius: 4px;
+}
+
+/*  Sign Up CSS */
+
+.signup::before {
+  left: 40%;
+  bottom: -130%;
+  background-color: rgba(250, 51, 78, 0.801);
+  animation: signupwaves 6s infinite linear;
+  
+}
+.signup::after {
+  left: 35%;
+  bottom: -125%;
+  background-color: rgba(105, 39, 212, 0.472);
+  animation: signupwaves 7s infinite;
+}
+@keyframes signupwaves {
+  from {
+    transform: translate(0, 0);
+  }
+  to {
+    transform: translate(-30px, -550px);
+  }
 }
