--- a/forum/style2.css
+++ b/forum/style2.css
@@ -41,7 +41,10 @@ body {
     display: flex;
     justify-content: center;
   }
-
+  .header,.footer{
+    position: relative;
+    z-index:2;
+  }
   .footer {
     background-color: rgb(0, 0, 51);
     border-radius: 4px;
