--- a/forum/common.css
+++ b/forum/common.css
@@ -1,18 +1,18 @@
 /* Responsive layout */
 @media screen and (max-width: 600px) {
-    .menu{
-      width:0 !important;
-    }
-    .left-tab {
-      display:none !important;
-    }
-    .content {
-      position: fixed !important;
-      left:0 !important;
-      top:7vh !important;
-      width:100vw !important;
-      padding-left:0 !important;
-    }
+  .menu{
+    display: none !important;
+  }
+  .left-tab {
+    display:none !important;
+  }
+  .content {
+    position: fixed !important;
+    left:0 !important;
+    top:7vh !important;
+    width:100vw !important;
+    padding-left:0 !important;
+  }
 }
 * {
   box-sizing: border-box;
@@ -20,21 +20,7 @@
   padding:0px;
   border:0px;
 }
-a {
-  color:white;
-  text-decoration: none;
-}
-.links {
-  padding:10px;
-  margin:10px;
-  color:black;
-  text-decoration:initial;
-}
-.links-with-buttons>input[type='button'] {
-  padding:10px;
-  margin:10px;
-  color:black;
-}
+
 html,body {
   height:100%;
   background-color: #FAFAFB;
@@ -58,6 +44,14 @@ button, .submitbtn, input[attr="subbtn"] {
   margin: 8px 0;
   width: auto;
 }
+input[type="button"]{
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
+  border-radius:2px;
+}
+input[type="button"]:hover{
+  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.2);
+  
+}
 /* Style the tables and buttons on mouse-over */
 table {
   width:100%;
@@ -70,12 +64,20 @@ th,td {
 textarea {
   font-family: 'Segoe UI', sans-serif !important;
 }
-.page-container {
-  position: absolute;
-  left:0;top:40px;
-  width:100vw;
-  
-  /* */
+a {
+  color:white;
+  text-decoration: none;
+}
+.links {
+  padding:10px;
+  margin:10px;
+  color:black;
+  text-decoration:initial;
+}
+.links-with-buttons>input[type='button'] {
+  padding:10px;
+  margin:10px;
+  color:black;
 }
 
 .left-tab {
@@ -86,7 +88,7 @@ textarea {
   height: 100vh;
   width:100px;
   display:inline-block;
-  border-right: 1px solid rgb(37, 200, 206); 
+  border-right: 1px solid rgb(0, 247, 255); 
   margin-right:5px;
   overflow-x: hidden;
   padding-top: 20px;
@@ -103,19 +105,20 @@ textarea {
   color:black;
 }
 .content {
-  position: fixed;
-  left:0 ;
-  top:35px !important;
-  padding-left:100px;
-  width:100vw;
+  position: absolute;
+  left:100px; top:35px !important;
+  width: -moz-calc(100% - 100px);
+  width: -webkit-calc(100% - 100px);
+  width: calc(100% - 100px);
+  height: 100%;
   display:inline-block;
   text-align:center;
 }
 .content-container {
-  height:100%;
+  position: absolute;
+  width:100%;
+  height: 100%;
   text-align:center;
-  width: 100%;
-  overflow-y: scroll;
 }
 
 /*new thing*/
@@ -193,20 +196,21 @@ textarea {
   padding: 5px;
   margin:5px;
 }
-.element:hover {
+.element:hover,.element>button:focus {
   background-color: #0084ff;
   border-bottom: 3px solid #0084ff;
   cursor: pointer;
 }
-.element:hover>ul,.element>:hover,.element:hover>ul:hover {
+
+.element:hover>ul,.element>:hover,.element:hover>ul:hover,.element>button:focus+ul {
   display: block;
 }
+
 .element:hover>ul:hover>li:hover {
   display: block;
   background-color: rgb(32, 38, 46);
   border-radius:5px
 }
-
 
 .categoryLinks:hover, .categoryLinks:hover>td, .categoryLinks:hover>td>a {
   background-color: #0084ff;
@@ -217,7 +221,7 @@ textarea {
 .add-thread-container {
   width:70vw;
   margin-top:40px;
-  box-shadow: 2px 2px 2px 2px grey;
+  box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
 }
 
 .userlinks {
@@ -225,15 +229,15 @@ textarea {
 }
 
 .thread-list-container {
-  padding-top:40px;
+  margin-top:40px;
+  padding-top: 20px;
   padding-bottom: 40px;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right:auto;
   width:90%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.thread-list-table>tbody>tr {
-  border-bottom:1px solid black;
+  border-radius:5px;
+  box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
 }
 .thread-links-list>td {
   margin-bottom:5px;
@@ -241,4 +245,16 @@ textarea {
 }
 .thread-links-list>tr {
   height:40px;
+}
+.thread-links-list:hover {
+  box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+  border-radius:8px;
+}
+.stock-buttons{
+  margin:0;
+  padding:0;
+  border:none;
+  outline:none;
+  background-color: transparent;
+  color:transparent;
 }
