--- a/forum/common.css
+++ b/forum/common.css
@@ -258,3 +258,16 @@ a {
   background-color: transparent;
   color:transparent;
 }
+
+table{
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {background-color:#f5f5f5;}
