--- a/forum/common.css
+++ b/forum/common.css
@@ -295,3 +295,6 @@ a.button2:hover{
   border-radius:5px;
   box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
 }
+.like-container:hover,.dislike-container:hover{
+  cursor: pointer;
+}
